updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a new software developer excited to lears</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in havana cuba, came to the united states when I was six years old</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>running</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>mma commentator</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>The hard streets of kendall</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To learn something I can be proud of</p>
     </section>
 
     <footer id="footer">
